--- a/client/package.json
+++ b/client/package.json
@@ -27,5 +27,9 @@
     "tslib": "^2.3.1",
     "typescript": "~4.5.4"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "papercss": "^1.8.3",
+    "spaper": "^0.4.6"
+  }
 }
